// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <button
    class="cusxw20 soui-button-primary c-5l0cgk soui-button-button"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="c-nmyyes soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c-d8gau soui-button-secondary c-5l0cgk soui-button-button c-fpstvu soui-button-disabled"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
